Fixed some responsive layout issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,8 @@
-
-
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+}
 
 .App {
   text-align: center;
@@ -61,4 +64,43 @@ button:disabled {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+/* Media query for screens with a max-width of 480px */
+@media (max-width: 480px) {
+  .search-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .header-input, .button {
+    width: 100%;
+    max-width: 300px;
+  }
+
+  .app-title {
+    margin-right: 0; 
+  }
+
+  #movies {
+    margin-right: auto;
+    margin-left: auto;
+    padding: 120px; 
+  }
+}
+
+/* Media query for screens with a max-width of 320px */
+@media (max-width: 320px) {
+  .header-input, .button {
+    width: 100%;
+    max-width: 260px;
+    font-size: 0.9em;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  #movies {
+    padding: 100px; 
+  }
 }
