--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -3,22 +3,24 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: 1001;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: scroll;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: 5% auto;
   padding: 20px;
   border: 2px solid #888;
-  width: 80%;
-  max-width: 600px;
+  width: 800px;
+  height: 1000px;
+  max-height:fit-content;
+  max-width: fit-content;
   border-radius: 8px;
 }
 
@@ -33,4 +35,47 @@
 .close-button:focus {
   color: black;
   cursor: pointer;
+}
+@media (max-width: 1024px) {
+  .modal-content {
+    width: 500px;
+    height: 1100px;
+  }
+  .app-title{
+    align-content: center;
+    margin-left: -90px;
+  }
+}
+
+@media (max-width: 768px) {
+  .modal-content {
+    width: 500px;
+    height: 1100px;
+  }
+  .app-title{
+    align-content: center;
+    margin-left: -90px;
+  }
+}
+
+@media (max-width: 480px) {
+  .modal-content {
+    
+    height: 1100px;
+  }
+  .app-title{
+    align-content: center;
+    margin-left: -90px;
+  }
+}
+
+@media (max-width: 320px) {
+  .modal-content {
+    margin-right: 40px;
+    height: 1100px;
+  }
+  .app-title{
+    align-content: center;
+    margin-left: -60px;
+  }
 }
